@@ -2,6 +2,11 @@
 
 # ===========GENKERNEL BASIC CONFIGURATION=============
 
+# Run 'make oldconfig' before compiling this kernel?
+# If set to "yes", also suppresses the fetch of the kernel .config file from
+# /etc/kernels, thus preserving the .config file in /usr/src/linux.
+# OLDCONFIG="no"
+
 # Run 'make menuconfig' before compiling this kernel?
 MENUCONFIG="no"
 
@@ -22,6 +27,9 @@ BOOTSPLASH="yes"
 
 # Mount BOOTDIR automatically if it isn't mounted?
 MOUNTBOOT="yes"
+
+# Make symlinks in BOOTDIR automatically?
+# SYMLINK="no"
 
 # Save the new configuration in /etc/kernels upon
 # successfull compilation
@@ -47,6 +55,9 @@ USECOLOR="yes"
 # Variables:
 #   %%ARCH%%  - Final determined architecture
 #   %%CACHE%% - Final determined cache location
+
+# Set genkernel's temporary work directory.  Default is /var/tmp/genkernel
+# TMPDIR="/var/tmp/genkernel"
 
 # Set the boot directory, default is /boot
 #BOOTDIR="/boot"
