@@ -2,6 +2,11 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_determineargs.sh,
+  gen_funcs.sh, genkernel, genkernel.8, genkernel.conf:
+  Added two patches from John R. Graham <john_r_graham@mindspring.com> from
+  bug #180161. This should fix bug #180161, bug #144703, and bug #150697.
+
   21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> x86/kernel-config-2.6:
   Added USB Printer support for bug #176543.
 
